# spirv-oxide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/dialect-spirv/: Cargo.toml
crates/dialect-spirv/src/: lib.rs
crates/spirv-device/: Cargo.toml
crates/spirv-device/src/: lib.rs
crates/spirv-host/: Cargo.toml
crates/spirv-host/src/: lib.rs
docs/: relationship-to-cuda-oxide.md
